--- a/Assets/UI Toolkit/MainMenu.uss
+++ b/Assets/UI Toolkit/MainMenu.uss
@@ -17,4 +17,9 @@
     border-bottom-left-radius: 15px;
     padding-top: -32px;
     margin-top: 56px;
+    transition-duration: 0.35s;
+}
+
+.button:hover {
+    scale: 1.1 1.1;
 }
